[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.12.1"
chrono = { version = "0.4.42" }
config = "0.15.19"
env_logger = "0.11.8"
once_cell = "1.21.3"
rand = { version = "0.8", features = ["std_rng"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-actix-web = "0.7.20"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["registry", "env-filter"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.0", features = ["v4"] }
validator = "0.16"

[dependencies.reqwest]
version = "0.12.26"
default-features = false
# We need the `json` feature flag to serialize/deserialize JSON payloads
features = ["json", "rustls-tls"]

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
claims = "0.7"
fake = "~2.3"
linkify = "0.9"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6"
